--- a/GameProject.vcxproj.filters
+++ b/GameProject.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="header\Buttton.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="resources\test.png">
