--- a/GameProject.vcxproj
+++ b/GameProject.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="header\stdlibs.h" />
     <ClInclude Include="header\ui\Arena.h" />
     <ClInclude Include="header\ui\Button.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\general\event.cpp" />
