--- a/GameProject.vcxproj.filters
+++ b/GameProject.vcxproj.filters
@@ -118,6 +118,9 @@
     <ClInclude Include="header\stdlibs.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\general\event.cpp">
