--- a/GameProject.vcxproj
+++ b/GameProject.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="header\stdlibs.h" />
     <ClInclude Include="header\ui\Arena.h" />
     <ClInclude Include="header\ui\Button.h" />
+    <ClInclude Include="header\ui\score_display.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +185,7 @@
     </ClCompile>
     <ClCompile Include="src\ui\Arena.cpp" />
     <ClCompile Include="src\ui\Button.cpp" />
+    <ClCompile Include="src\ui\score.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
