--- a/GameProject.vcxproj.filters
+++ b/GameProject.vcxproj.filters
@@ -80,6 +80,21 @@
     <Image Include="resources\game_bg1.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="resources\image\obstacle.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="resources\image\player.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="resources\image\score_5.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="resources\image\score_10.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="resources\image\score_20.png">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\general\event.h">
@@ -124,6 +139,9 @@
     <ClInclude Include="header\ui\score_display.h">
       <Filter>头文件\ui</Filter>
     </ClInclude>
+    <ClInclude Include="header\object\Obstacle.h">
+      <Filter>头文件\object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\general\event.cpp">
@@ -164,6 +182,9 @@
     </ClCompile>
     <ClCompile Include="src\ui\score.cpp">
       <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\object\Obstacle.cpp">
+      <Filter>源文件\object</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
