--- a/GameProject.vcxproj.filters
+++ b/GameProject.vcxproj.filters
@@ -95,6 +95,12 @@
     <Image Include="resources\image\score_20.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="resources\mainmenu_bg1.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="resources\diemenu_bg1.png">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\general\event.h">
