--- a/GameProject.vcxproj
+++ b/GameProject.vcxproj
@@ -147,9 +147,11 @@
     <Image Include="resources\image\score_5.png" />
     <Image Include="resources\mainmenu_bg1.png" />
     <Image Include="resources\UI\arrow.png" />
+    <Image Include="resources\UI\back_die.png" />
     <Image Include="resources\UI\BACK_hoverd.png" />
     <Image Include="resources\UI\BACK_pushed.png" />
     <Image Include="resources\UI\LEADERBOARD.png" />
+    <Image Include="resources\UI\playagain.png" />
     <Image Include="resources\UI\quit_game_hovered.png" />
     <Image Include="resources\UI\quit_game_idle.png" />
     <Image Include="resources\UI\quit_game_pushed.png" />
