--- a/GameProject.vcxproj
+++ b/GameProject.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="header\stdlibs.h" />
     <ClInclude Include="header\ui\Arena.h" />
     <ClInclude Include="header\ui\Button.h" />
+    <ClInclude Include="header\ui\game_over_screen.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
