--- a/GameProject.vcxproj
+++ b/GameProject.vcxproj
@@ -177,9 +177,11 @@
     <ClInclude Include="header\ui\Arena.h" />
     <ClInclude Include="header\ui\Button.h" />
     <ClInclude Include="header\ui\game_over_screen.h" />
+    <ClInclude Include="main_menu.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="main_menu.cpp" />
     <ClCompile Include="src\general\event.cpp" />
     <ClCompile Include="src\general\scene.cpp" />
     <ClCompile Include="src\general\SD_music.cpp" />
