基本修复了界面切换和显示的bug

--- a/GameProject.vcxproj.filters
+++ b/GameProject.vcxproj.filters
@@ -152,8 +152,11 @@
     <ClInclude Include="header\ui\game_over_screen.h">
       <Filter>头文件\ui</Filter>
     </ClInclude>
-    <ClInclude Include="main_menu.h">
-      <Filter>头文件\ui</Filter>
+    <ClInclude Include="header\ui\game_screen.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="header\ui\main_menu.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -202,8 +205,11 @@
     <ClCompile Include="src\ui\game_over_screen.cpp">
       <Filter>源文件\ui</Filter>
     </ClCompile>
-    <ClCompile Include="main_menu.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="src\ui\game_screen.cpp">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\main_menu.cpp">
+      <Filter>源文件\ui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
