--- a/GameProject.vcxproj.filters
+++ b/GameProject.vcxproj.filters
@@ -102,6 +102,9 @@
     <Image Include="resources\UI\playagain.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="resources\image\icon.ico">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\general\event.h">
